WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130981
Small adjustments to WebCore::IOSurface (inUse->isInUse, createImage always works, clearGraphicsContext)
https://bugs.webkit.org/show_bug.cgi?id=130981
Summary
Small adjustments to WebCore::IOSurface (inUse->isInUse, createImage always w...
Tim Horton
Reported
2014-03-31 12:53:53 PDT
Created
attachment 228190
[details]
patch Some small fixes that are the dependencies of multiple future patches, and as such were factored out.
Attachments
patch
(4.62 KB, patch)
2014-03-31 12:53 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
WebKit Commit Bot
Comment 1
2014-03-31 12:54:54 PDT
Attachment 228190
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 2
2014-03-31 13:45:13 PDT
Comment on
attachment 228190
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=228190&action=review
> Source/WebCore/ChangeLog:3 > + Small adjustments to WebCore::IOSurface
Missing bug number.
Tim Horton
Comment 3
2014-03-31 14:11:30 PDT
http://trac.webkit.org/changeset/166528
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug