Small adjustments to WebCore::IOSurface https://bugs.webkit.org/show_bug.cgi?id=130981

Reviewed by Simon Fraser.

* WebCore.exp.in:
Export some more things.

* platform/graphics/cocoa/IOSurface.h:
createImage() can't be const because it calls ensurePlatformContext().

* platform/graphics/cocoa/IOSurface.mm:
(IOSurface::createImage):
We should be able to create an image even if the CGContext has been cleared (or never created).

(IOSurface::isInUse):
Rename inUse() to isInUse().

(IOSurface::clearGraphicsContext):
Add clearGraphicsContext().


Canonical link: https://commits.webkit.org/149039@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166528 268f45cc-cd09-0410-ab3c-d52691b4dbfc