Source/WebCore/platform/graphics/cocoa/IOSurface.mm
@@ -115,12 +115,9 @@ mach_port_t IOSurface::createMachPort() const
     return IOSurfaceCreateMachPort(m_surface.get());
 }
 
-RetainPtr<CGImageRef> IOSurface::createImage() const
+RetainPtr<CGImageRef> IOSurface::createImage()
 {
-    if (!m_cgContext)
-        return nullptr;
-
-    return adoptCF(CGIOSurfaceContextCreateImage(m_cgContext.get()));
+    return adoptCF(CGIOSurfaceContextCreateImage(ensurePlatformContext()));
 }
 
 CGContextRef IOSurface::ensurePlatformContext()
@@ -186,9 +183,15 @@ IOSurface::SurfaceState IOSurface::setIsPurgeable(bool isPurgeable)
     return IOSurface::SurfaceState::Valid;
 }
 
-bool IOSurface::inUse() const
+bool IOSurface::isInUse() const
 {
     return IOSurfaceIsInUse(m_surface.get());
+}
+
+void IOSurface::clearGraphicsContext()
+{
+    m_graphicsContext = nullptr;
+    m_cgContext = nullptr;
 }
 
 #endif // USE(IOSURFACE)
